# lumen-backend

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LUMEN_CONTEXT.md  deploy.sh  ingest.sh  project_instructions.md  pyproject.toml
backend/: .env.example  AGENTS.md  pyrightconfig.json  requirements.txt
backend/app/: config.py  main.py  security.py  state.py
backend/app/agents/: context.py  db.py  guardrails.py  kardec.py  registry.py  sessions.py
backend/tests/: conftest.py
docker/: .env.example  backend.Dockerfile  docker-compose.cpu.yml  docker-compose.prod.yml  docker-compose.yml  frontend.Dockerfile  nginx.conf
docs/: agno-feature-roi-guide.md  data-sience-improvements.md  design-system.md  llm-engine.md  security-privacy-audit.md  vps-deploy-personal.md  vps-deploy.md
evals/: AGENTS.md  README.md  build_gold_dataset.py  exp_question_embeddings.py  kv_cache_bench.py  lde_question_recall.py  retrieval_eval.py  retrieval_probe.py  validate_gold_dataset.py
evals/data/: gold_manual_entries.json  gold_retrieval_300.json  lde-50-questions.json
evals/results/: bench_20260412_183844.json  exp_hybrid_bm25.json  exp_larger_pool.json  exp_question_embeddings.json  exp_question_embeddings_k20.json  retrieval_eval_latest.json
frontend/: .env.example  AGENTS.md  app.js  index.html  original_index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: terms.md
frontend/src/: App.jsx  index.css  main.jsx
specs/agents/: agente-claude.md  agente-codex.md
specs/architecture/: api_contract.md  architecture.md  parsing_strategy.md
specs/requirements/: requirements.md
specs/tasks/: admin-page-plan.md  claude-tasks-phase1.md  codex-tasks-phase1.md  phase-1-mvp.md  phase-2-agno-chat.md  security-privacy-hardening.md  user-capabilities-plan.md
(+68 files in other folders)
